--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
@@ -1,6 +1,17 @@
 {% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig'%}
 {% block home %}
-   {#<link type="text/css" rel="stylesheet" href="{{ asset('css/profile.css') }}">#}
+   
+   <style>
+      .col-lg-3 {
+         display: none !important;
+     }
+
+     .col-lg-9 {
+         width: 100% !important;
+     }
+
+   </style>
+   <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/datatables/dataTables.bootstrap.css') }}">
    
    <input id="carreraSeleccionada" value="" type="hidden" >
    
@@ -16,6 +27,8 @@
                {% for countCarreras, datosCarrera in data.datosCarreras %}
                   <input id="materiaSeleccionada-Carrera_{{datosCarrera.id_sa_carrera}}" value="" type="hidden" >
                   <input id="nombreMateriaSeleccionada-Carrera_{{datosCarrera.id_sa_carrera}}" value="" type="hidden" >
+                  <input id="inicioCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_inicio}}" type="hidden" >
+                  <input id="finCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_fin}}" type="hidden" >
                   <div id="panelCentralCarrera-{{datosCarrera.id_sa_carrera}}" class="panel panel-default">
                      <div class="panel-heading">
                         <h4 class="panel-title">
@@ -347,22 +360,39 @@
                   $("#chartAsistencias").children().show();
                   $("#img_demo").show();*/
                }
+               var modelessMaterias;
+               
                $.ajax({
                   url:   jumpAction,
                   data: obj_data,
                   type:  'post',
                   async: false,
                   beforeSend: function () {
+                     modelessMaterias = new $.flavr({
+                                                   modal   : true,
+                                                   content : '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Cargando...</b>',
+                                                   buttons     : {}
+                                                });
+
                      tablaMaterias.html("Cargando, espere por favor...");
                   },
                   error: function(){
-                     var mensajeErrorNotas   = "Lo sentimos. Se  presentó un problema para cargar el listado de materias."
-                     tablaMaterias.html("");
-                     lanzarModal('Listado de Materias',mensajeErrorNotas,'Aceptar');
+                     modelessMaterias.close();
+                     modelessMaterias = new $.flavr({
+                                                   modal   : true,
+                                                   content : 'Lo sentimos. Se  presentó un problema para cargar el listado de materias.',
+                                                   buttons     : {
+                                                      primary : { text: 'Aceptar', style: 'primary' }
+                                                   }
+                                                });
+                     //var mensajeErrorNotas   = "Lo sentimos. Se  presentó un problema para cargar el listado de materias."
+                     tablaMaterias.html("Se  presentó un problema para cargar el listado de materias.");
+                     //lanzarModal('Listado de Materias',mensajeErrorNotas,'Aceptar');
                   },
                   success:  function (dataResponse) {
                    // sitioCargado(notificacionIndex);
-                    tablaMaterias.html(dataResponse);
+                     modelessMaterias.close();
+                     tablaMaterias.html(dataResponse);
                   },
                   dataType:'html'
                });
