--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
@@ -45,11 +45,13 @@
          var materiaSplit  = $(this).attr("id").split("-");
          var idMateria     = materiaSplit[1];
          var idCarrera     = $("#carreraSeleccionada").val();
-         var obj_data      = {'idMateria':idMateria,'idCarrera':idCarrera};
+         var inicioCiclo    = $("#inicioCiclo-Carrera_"+idCarrera).val();
+         var finCiclo      = $("#finCiclo-Carrera_"+idCarrera).val();
+         var obj_data      = {'idMateria':idMateria,'idCarrera':idCarrera, 'inicioCiclo':inicioCiclo, 'finCiclo':finCiclo};
 
          var optionSelect        = $(this);
          var jumpOption          = '{{path('docentes_listado_alumnos_materia')}}';
-         var tituloPanelMateria  = $("#nombreMateria_"+idMateria).html() + " ["+ $("#paraleloMateria_"+idMateria).html() +"]";;
+         var tituloPanelMateria  = $("#nombreMateria_"+idMateria).html() + " ["+ $("#paraleloMateria_"+idMateria).html() +"]";
          
          $.ajax({
             url:  jumpOption,
@@ -84,12 +86,13 @@
       
       $(".notasAlumnos").on('click', function(event){
          event.preventDefault();
+         var modelessMaterias;
          var idSplit          = $(this).attr('id').split('-');
          var nombreElemento   = idSplit[0]; 
          var idMateria        = idSplit[1]; 
          //var idDocente        = 1;
          var idCarrera        = $("#carreraSeleccionada").val();
-         var tituloPanelMateria  = $("#nombreMateria_"+idMateria).html() + " ["+ $("#paraleloMateria_"+idMateria).html() +"]";;
+         var tituloPanelMateria  = $("#nombreMateria_"+idMateria).html() + " ["+ $("#paraleloMateria_"+idMateria).html() +"]";
          
          var optionSelect = $(this);
          var jumpOption = '{{path('docentes_notas_alumnos_materia')}}';
@@ -103,15 +106,26 @@
             data: obj_data,
             async: false,
             beforeSend: function () {
-              //optionSelect.closest(".panel-body").html("Procesando, espere por favor...");
+               modelessMaterias = new $.flavr({
+                                                modal   : true,
+                                                content : '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Cargando...</b>',
+                                                buttons     : {}
+                                             });
             },
             error: function(){
-               //console.log("hay un error");
-               var mensajeErrorNotas   = "Lo sentimos. Se  presentó un problema para cargar la consulta de notas."
-               lanzarModal('Consulta de Notas',mensajeErrorNotas,'Aceptar');//alert(mensajeErrorNotas);
+               modelessMaterias.close();
+               var mensajeErrorNotas   = "Lo sentimos. Se  presentó un problema para cargar la consulta de notas.";
+               modelessMaterias = new $.flavr({
+                                                modal   : true,
+                                                content : mensajeErrorNotas,
+                                                buttons     : {
+                                                   primary : { text: 'Aceptar', style: 'primary' }
+                                                }
+                                             });
             },
             success:  function (dataResponse) {
-              //console.log(optionSelect.closest(".panel-body"));
+              modelessMaterias.close();
+              $("#materiaSeleccionada-Carrera_"+idCarrera).val(idMateria);
               optionSelect.closest(".panel-body").html(dataResponse);
             },
             dataType:'html'
