--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -12,6 +12,7 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/AdminLTE.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/skins/_all-skins.min.css') }}">
+    <link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/main.css') }}">
 
     <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
@@ -62,13 +63,15 @@
     <script src="{{ asset('theme/plugins/fastclick/fastclick.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/app.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/demo.js') }}"></script>
+    <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
 
     <script src="{{ asset('js/sistemau.functions.js') }}"></script>
     <script src="{{ asset('js/academico.alerts.js') }}"></script>
     <script src="{{ asset('js/mensajes.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/wizard/jquery.smartWizard.js') }}"></script> <!-- Matriculacion-->
 
-
+   <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
+   <script src="{{ asset('theme/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
 <script type="text/javascript">
   $(function () {
 // !IMPORTANT -- FIX ERROR SIDEBAR MENU IN CHARTS-DYNAMIC PAGE   stalin
