--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -1,12 +1,3 @@
-.col-lg-3 {
-    width: 22%;
-    display: none !important;
-}
-
-.col-lg-9 {
-    width: 100% !important;
-}
-
 .panel-group .panel .panel-title {
     font-size: 85% !important;
     font-weight: bold !important;
@@ -14,4 +5,22 @@
 
 .sidebar-menu .treeview-menu>li>a {
     font-size: 13px !important;
+}
+
+.main-header {
+    z-index: 999 !important;
+}
+
+
+.flavr-container .flavr-fixer .flavr-outer {
+   background: #F9FAFC none repeat scroll 0 0 padding-box;
+}
+.flavr-container .flavr-fixer .flavr-outer .flavr-content {
+   color: #333;
+   font-size: 14px;
+   padding: 7px 5px 2px;
+}
+
+.mensajeError {
+   margin: 40px;
 }
