--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -207,6 +207,7 @@
             // });
         },
         eventDrop: function(date, allDay){
+          // location.href = '{#{path('estudiantes_notas_actuales')}#}';
             alert("drop");
         },
           drop: function (date, allDay) { // this function is called when something is dropped (evento cuando se deja caer un evento al calendario)
