--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -42,7 +42,7 @@
         </ul>
       </li>
       {% endif %}
-       {% if app.session.get('perfil') == perfilEstAdm or app.session.get('perfil') == perfilDocAdm %}
+     {#  {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilDocAdm %}#}
         <li class="treeview">
         <a href="{{path('SisAcademico_Docentes_home')}}">
           <i class="fa fa-comments-o"></i><span>Mensajes</span>
@@ -53,7 +53,7 @@
           <li><a href="{{ path('dayscript_configuracion') }}"><i class="fa fa-circle-o"></i> Configuracion Mensajes</a></li>         
         </ul>
       </li>
-      {% endif %}
+     {# {% endif %}#}
     </ul>
   </section>
 </aside>
